Fix landign intro alignment

--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -39,7 +39,7 @@ header.landing {
     text-align: center;
     @extend .textHeading;
   }
-  p.intro {
+  .intro p {
     @extend .introText;
     text-align: center;
   }
